[package]
name = "orx-closure"
version = "0.1.4"
edition = "2021"
authors = ["orxfun <orx.ugur.arikan@gmail.com>"]
description = "An explicit closure with absolute seperation of the captured data from the function."
license = "MIT"
repository = "https://github.com/orxfun/orx-closure/"
keywords = ["closure", "fn", "fn_traits", "capture", "move"]
categories = ["rust-patterns", "data-structures"]


[dependencies]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "fun_as_a_field"
harness = false
